changed the text

--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
 
         <div class="hero-bottom-content">
             <div class="hero-text">
-                <p>Chega de apps medianos. 
-                    Crio o mobile que seus usuários realmente querem usar. </p>
+                <p>Seu aplicativo merece uma experiência incrível. </p>
     
                 <p>Como desenvolvedora mobile, meu foco vai além do código: 
                 construo aplicativos que oferecem uma UX/UI impecável. 
