--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
             <p>Vamos criar?</p>
 
             <div class="contact-links">
-                <a href="https://www.linkedin.com/in/hevellyn-mesquita/" target="_blank" class="linkedin">LinkedIn</a>
-                <a href="https://www.instagram.com/mesquita.hev/" target="_blank" class="instagram">Instagram</a>
-                <a href="https://github.com/hevellyn16" target="_blank" class="github">GitHub</a>
+                <a href="https://www.linkedin.com/in/hevellyn-mesquita/" target="_blank" class="button">LinkedIn</a>
+                <a href="https://www.instagram.com/mesquita.hev/" target="_blank" class="button">Instagram</a>
+                <a href="https://github.com/hevellyn16" target="_blank" class="button">GitHub</a>
             </div>
         </div>
     </div>
