--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Minha página pessoal</title>
     <link rel="stylesheet" href="css/styles.css">
-    <script src="script.js"></script>
 </head>
 
 <body>
@@ -24,6 +23,8 @@
 
     <!-- Hero Section -->
     <div class="hero">
+
+        <div class="water-effect"></div>
 
         <div class="title">
                 <h1>Minha página pessoal - Hevellyn Mesquita</h1>
@@ -49,12 +50,13 @@
             <p>Vamos criar?</p>
 
             <div class="contact-links">
-                <a href="https://www.linkedin.com/in/hevellyn-mesquita/" target="_blank" class="button">LinkedIn</a>
+                <a href="https://www.linkedin.com/in/hevellyn-m-07871622a/" target="_blank" class="button">LinkedIn</a>
                 <a href="https://www.instagram.com/mesquita.hev/" target="_blank" class="button">Instagram</a>
                 <a href="https://github.com/hevellyn16" target="_blank" class="button">GitHub</a>
             </div>
         </div>
     </div>
     </div>
+    <script src="script.js"></script>
     </body>
 </html>
