Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -34,12 +34,9 @@
 
             <!-- Hero Text and Image -->
             <div class="hero-text">
-                <p>Seu aplicativo merece uma experiência incrível. </p>
+                <p>Criando experiências digitais que conectam. </p>
     
-                <p>Como desenvolvedora mobile, meu foco vai além do código: 
-                construo aplicativos que oferecem uma UX/UI impecável. 
-                Ajudo a dar vida às suas ideias, garantindo que seu projeto mobile seja não apenas funcional, 
-                mas também memorável e fácil de usar. Vamos criar algo incrível juntos? </p>
+                <p> Posso ajudar a tirar suas ideias do papel, assegurando que seu projeto digital seja não apenas funcional, mas também memorável e fácil de usar. Que tal criarmos algo impactante juntos? </p>
             </div>
             <img src="img/me.jpeg" alt="Imagem de destaque" class="hero-image">
 
